<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, RingToneDuoduoActivity!</string>
    <string name="app_name">铃声多多</string>
    <string name="english_name">RingToneDuoduo</string>
    <string name="app_version_prefix">RingDD_ar_</string>
    <string name="install_source_suffix">.apk</string>
    <string name="homepage">首页</string>
    <string name="new_list_title">最新铃声</string>
    <string name="hot_list_title">最热铃声</string>
    <string name="test_song_name">K歌之王</string>
    <string name="test_artist">陈奕迅</string>
    <string name="test_duration">30s</string>
    <string name="get_more_ringtones">获取更多...</string>
    <string name="more_options_text0">多多家族</string>
    <string name="more_options_text1">问题反馈</string>
    <string name="more_options_text2">帮助关于</string>
    <string name="more_options_text3">清空缓存</string>
    <string name="more_options_text4">清空搜索历史</string>
    <string name="homepage_header">首页</string>
    <string name="category_header">分类</string>
    <string name="my_ringtone_header">我的铃声</string>
    <string name="more_options_header">更多</string>
    <string name="pop_songs_header">流行金曲</string>
    <string name="movie_and_ads_header">影视广告</string>
    <string name="comic_and_game_header">动漫游戏</string>
    <string name="sms_header">信息短信</string>
    <string name="dance_music_header">DJ舞曲</string>
    <string name="alternatives_header">搞笑另类</string>
    <string name="user_upload_header">用户上传</string>
    <string name="others_header">其它另类</string>
    <string name="search_header">铃声搜索</string>
    <string name="umeng_ad_header">应用推荐</string>
    <string name="loading_list">正在载入铃声列表...</string>
    <string name="loading_list_cailing">正在加载彩铃列表...</string>
    <string name="load_list_fail_string">载入列表失败，点击以重试</string>
    <string name="duoduo_family_header">多多家族</string>
    <string name="loading_duoduo_family_prompt">正在载入...</string>
    <string name="loading_duoduo_family_fail_prompt">载入多多家族失败，点击以重试。</string>
    <string name="user_feedback_header">反馈建议</string>
    <string name="about_info_header">帮助关于</string>
    <string name="user_feedback_hint">请输入您的反馈意见：</string>
    <string name="contact_info_hint">请输入您的联系方式：</string>
    <string name="search_keyword_hint">请输入搜索关键字</string>
    <string name="app_title">铃声多多 For Android</string>
    <string name="release_date">2013-07-23</string>
    <string name="app_intro1">作为多多家族的一员，铃声多多致力于为手机用户提供最炫和最新的免费铃声资源，使您的手机永远与众不同。铃声多多具备如下功能：</string>
    <string name="app_intro2">1. 紧跟流行前沿，每日更新精彩铃声榜单；</string>
    <string name="app_intro3">2. 八种铃声分类，海量资源随时随地搜索；</string>
    <string name="app_intro4">3. 一键试听收藏，铃声管理设置简单易用。</string>
    <string name="app_intro5">铃声多多本身完全免费，使用过程中产生的任何流量费用均由运营商收取。任何问题可通过下面的QQ或者Email联系我们。</string>
    <string name="QQ">客服QQ群: 251707609</string>
    <string name="partner">合作伙伴：iCOLOR Design</string>
    <string name="Email">Email: shoujiduoduo@gmail.com</string>
    <string name="set_ring_error_message">很遗憾，铃声未能设置成功。</string>
    <string name="set_ring_incoming_call">来电铃声</string>
    <string name="set_ring_message">短信铃声</string>
    <string name="set_ring_alarm">闹铃铃声</string>
    <string name="set_ring_contact">联系人个性铃声</string>
    <string name="set_ring_ok">确定</string>
    <string name="set_ring_cancel">取消</string>
    <string name="contact">联系人</string>
    <string name="cailing_manage">我的彩铃</string>
    <string name="default_cailing">当前彩铃</string>
    <string name="save_setting">保存设置</string>
    <string name="restore_default_ring">恢复默认铃声</string>
    <string name="restore_person_ring">恢复个性铃声</string>
    <string name="had_set_ring_contact">已设置铃声的联系人</string>
    <string name="default_ring">默认铃声</string>
    <string name="share_title">分享给好友</string>
    <string name="share_send">分享</string>
    <string name="show_ad_after_24hr">false</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_xp_size">Size</string>
    <string name="umeng_xp_action_open">open</string>
    <string name="umeng_xp_action_browse">browse</string>
    <string name="umeng_xp_action_download">download</string>
    <string name="umeng_xp_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_xp_back_to_top">Top</string>
    <string name="umeng_xp_action_callphone" />
    <string name="umeng_xp_no_browser_tips">please intall web browser..</string>
    <string name="umeng_xp_more">more</string>
    <string name="umeng_xp_back">Back</string>
    <string name="umeng_xp_title_info">Featured</string>
    <string name="umeng_xp_dowload_dialog_dinfo">Download</string>
    <string name="umeng_xp_dowload_dialog_cinfo">Call</string>
    <string name="umeng_xp_dowloadOrNot">Download the app?</string>
    <string name="umeng_xp_failed_loading">Failed loading...</string>
    <string name="umeng_xp_tip_download_pre">Start download</string>
    <string name="umeng_xp_info_banner_deprecated">Banner style is not supported for current version of SDK, please contact us for support.</string>
</resources>
