<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/contact_banner" android:background="#ff68ad2e" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <Button android:id="@id/contact_back" android:background="@drawable/btn_back_new" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_centerVertical="true" />
        <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contact" android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/bottom_control" android:background="#ffe7e7e7" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:textColor="#ffffffff" android:id="@id/set_contact_ring_save" android:background="@drawable/btn_shape_green_bkg" android:layout_width="90.0dip" android:layout_height="34.0dip" android:text="@string/save_setting" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:textColor="#ffffffff" android:id="@id/set_contact_ring_cancel" android:background="@drawable/btn_shape_green_bkg" android:layout_width="90.0dip" android:layout_height="34.0dip" android:text="@string/set_ring_cancel" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/bottom_control" android:layout_below="@id/contact_banner">
        <com.shoujiduoduo.ringtone.util.IndexListView android:id="@id/contact_list" android:focusable="true" android:fadingEdge="none" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="fill_parent" android:cacheColorHint="#00000000" android:divider="#ffe4e4e4" android:dividerHeight="1.0dip" android:fastScrollEnabled="true" />
    </LinearLayout>
</RelativeLayout>